2006-02-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paintChildren): Also check for the visibility of a child component
	to avoid artifacts.
	(repaint): Simply add this component to the RepaintManager rather than
	trying to do useless optimization here.

2006-02-15  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSpinner.java
	(DefaultEditor.DefaultEditor(JSpinner)): Add self to text field as a 
	PropertyChangeListener,
	(DefaultEditor.getSpinner): Updated API docs,
	(DefaultEditor.dismiss): Likewise,
	(DefaultEditor.getTextField): Likewise,
	(DefaultEditor.layoutContainer): Likewise,
	(DefaultEditor.minimumLayoutSize): Likewise,
	(DefaultEditor.preferredLayoutSize): Likewise,
	(DefaultEditor.propertyChange): Implemented,
	(DefaultEditor.stateChanged): Implemented,
	(DefaultEditor.removeLayoutComponent): Updated API docs,
	(DefaultEditor.addLayoutComponent): Likewise,
	(NumberEditor.NumberEditor(JSpinner)): Set formatter for text field,
	(NumberEditor.NumberEditor(JSpinner, String)): Likewise,
	(NumberEditor.getFormat): Implemented,
	(NumberEditor.getModel): Updated API docs,
	(NumberEditorFormatter): New static inner class,
	(ListEditor.getModel): Updated API docs,
	(DateEditor.dateFormat): Removed,
	(DateEditor.DateEditor(JSpinner)): Set formatter for text field,
	(DateEditor.DateEditor(JSpinner, String)): Likewise,
	(DateEditor.init): Removed,
	(DateEditor.getFormat): Reimplemented,
	(DateEditorFormatter): New static inner class,
	(ModelListener): New inner class,
	(model): Updated API docs,
	(editor): Likewise,
	(listener): Removed,
	(JSpinner()): Updated API docs,
	(JSpinner(SpinnerModel)): Set up ModelListener,
	(setEditor): Fire property change,
	(getModel): Updated API docs,
	(setModel): Removed check for null editor,
	(setValue): Updated API docs,
	(getUIClassID): Updated API docs,
	(createEditor): Handle SpinnerListModel case,
	* javax/swing/plaf/basic/BasicSpinnerUI.java
	(createUI): Updated API docs,