@@ -1,5 +1,11 @@
 2006-02-15  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/JInternalFrame.java
+	(dispose): Call setVisible(false) instead of hide.
+	(doDefaultCloseOperation): Likewise.
+
+2006-02-15  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/JComponent.java
 	(paintChildren): Also check for the visibility of a child component
 	to avoid artifacts.
